# mev-inspect-rs

./: Cargo.toml  LICENSE  NOTES.md  README.md  inspect.sh  mev_inspection_blocks.psql
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml
abi/: 0x-exchange-v3.json  0x-uniswap-bridge.json  aavecore.json  bpool.json  cether.json  comptroller.json  ctoken.json  curvepool.json  curveregistry.json  unipair.json  unirouterv2.json  unirouterv3.json
migrations/00000000000000_initial_setup/: down.sql  up.sql
res/: 11017338.csv  11017338.data.json  11017338.trace.json  balancer_trade.data.json  balancer_trade.json  balancer_trade2.data.json  balancer_trade2.json  bot_selfdestruct.data.json  bot_selfdestruct.json  bot_trade.data.json  bot_trade.json  compound_liquidation.data.json  compound_liquidation.json  curve_arb.data.json  curve_arb.json  dydx_loan.data.json  dydx_loan.json  exact_tokens_for_eth.data.json  exact_tokens_for_eth.json  exchange_proxy.data.json  exchange_proxy.json  liquidation_1.data.json  liquidation_1.json  reverted_arb.data.json  reverted_arb.json  simple_curve_arb.data.json  simple_curve_arb.json  simple_liquidation.data.json  simple_liquidation.json  sushipairs.csv  triangular_arb.data.json  triangular_arb.json  v1pairs.csv  v2pairs.csv  zapper1.data.json  zapper1.json
scripts/: addrs.py
scripts/log_fillers/: dydx.json  getDydxLiqs.js  package.json
src/: addresses.rs  cached_provider.rs  lib.rs  main.rs  mevdb.rs  model.rs  prices.rs  sandwich.rs  traits.rs
src/bor/: mod.rs  provider.rs
src/inspectors/: aave.rs  addresses.rs  arb.rs  balancer.rs  batch.rs  compound.rs  curve.rs  erc20.rs  mod.rs  uniswap.rs  zeroex.rs
src/inspectors/balancer/: mod.rs
src/inspectors/types/: actions.rs  mod.rs
src/inspectors/uniswap/: inspector.rs  mod.rs  reducer.rs
src/reducers/: arbitrage.rs  liquidation.rs  mod.rs  trade.rs
src/test_helpers/: mod.rs
src/types/: actions.rs  classification.rs  evaluation.rs  inspection.rs  mod.rs
