[package]
name = "mev-inspect"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
serde_json = "1.0.64"
once_cell = "1.7.2"
itertools = "0.10.0"
anyhow = "1.0.40"

# cached provider
thiserror = "1.0.24"
async-trait = "0.1.48"
serde = "1.0.125"

# postgres connection
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.0"
rust_decimal = { version = "1.10.3", features = ["db-postgres", "db-tokio-postgres"] }
gumdrop = "0.8.0"
futures = "0.3.13"
hex = "0.4.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"

[features]
postgres-tests = []
